# rag-lab

./: .env.example  .gitignore  Databases CRUD Examples.ipynb  LICENSE  RAG_Lab_Overview.md  README.md  app.py  architecture.md  architecture_team_example.md  architecture_team_template.md  pyproject.toml  sql_practice.md
rag_lab_1_postgre/: README.md  requirements.txt
rag_lab_1_postgre/app/: main.py  models.py
rag_lab_3_chromadb/: .env,example  README.md  app.py  pyproject.toml
rag_lab_4_neo4j/: Installation.docx
