[project]
name = "rag-lab"
version = "1.0.0"
description = "INFO5707 Final Project"
requires-python = ">=3.11, <3.13"

dependencies = [
    # LangChain stack (match existing lab versions exactly)
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-ollama>=0.2.0",

    # LangGraph
    "langgraph>=1.0.0",

    # Vector store
    "chromadb>=0.5.0",

    # Embeddings (local, no API key required)
    "sentence-transformers>=3.0.0",
    "transformers>=4.30.0,<4.47.0",

    # Document loaders
    "pypdf>=4.0.0",

    # PostgreSQL
    "psycopg2-binary>=2.9.0",

    # MongoDB
    "pymongo>=4.6.0",

    # Neo4j
    "neo4j>=5.0.0",

    # UI
    "streamlit>=1.38.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
]
